# Vulki

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  shader_parser.cpp
include/: assets.hpp  device.hpp  ecs.hpp  error_handling.hpp  gizmo.hpp  memory.hpp  model_loader.hpp  particle_sim.hpp  path_tracing.hpp  primitives.hpp  profiling.hpp  random.hpp  render_graph.hpp  shader_compiler.hpp
shaders/: 3p3n2t.frag.glsl  3p3n2t.vert.glsl  camera_test.comp.glsl  gizmo.frag.glsl  gizmo.vert.glsl  gizmo_line.vert.glsl  glrf.rsm.vert.glsl  gltf.frag.glsl  gltf.vert.glsl  ibl_integrator.comp.glsl  image_fill.comp.glsl  lambert.frag.glsl  linearize_depth.comp.glsl  lpv.comp.glsl  lpv.debug.vert.glsl  lpv_prop.comp.glsl  mip_build.comp.glsl  particle.frag.glsl  particle.vert.glsl  path_tracing_plane.vert.glsl  pbr_shading.comp.glsl  postprocess.comp.glsl  raymarch.comp.1.glsl  raymarch.comp.2.glsl  raymarch.comp.glsl  raymarch.comp.glsl.spv.txt  red.frag.glsl  rsm.frag.glsl  simple_0.vert.glsl  simple_mul16.comp.glsl  ssr.comp.glsl  swap_image.comp.glsl  ug_debug.frag.glsl  ug_debug.vert.glsl  zpyramid_build.comp.glsl
shaders/tests/: bufferless_triangle.vert.glsl  bufferless_triangle.vert.glsl.spv.txt  bufferless_tringle.vert.glsl  camera_test.comp.glsl  camera_test.comp.glsl.spv.txt  image_fill.comp.glsl  simple_0.frag.glsl  simple_1.frag.glsl  simple_1.frag.glsl.spv.txt  simple_mul16.comp.glsl  simple_mul16.comp.glsl.spv.txt
src/: device.cpp  ecs.cpp  kernel.ispc  main.cpp  memory.cpp  model_loader.cpp  particle_sim.cpp  render_graph.cpp
tests/: test_0.cpp  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp
